fixed problems